# tinytest

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md  tinytest.h  travis.sh
test/: CMakeLists.txt  main.c  test-allcheck-eq.c  test-allcheck-ge.c  test-allcheck-gt.c  test-allcheck-le.c  test-allcheck-lt.c  test-allcheck-ne.c  test-allclose-double.c  test-allclose-float.c  test-allequal-integer.c  test-allequal-unsigned.c  test-check-eq.c  test-check-ge.c  test-check-gt.c  test-check-le.c  test-check-lt.c  test-check-ne.c  test-close.c  test-custom-msg.c  test-main-arg.c  test-segfault.c
